--- a/content/specification/opcode-0.ipynb
+++ b/content/specification/opcode-0.ipynb
@@ -7,6 +7,16 @@
    "source": [
     "# Opcode 0: Address\n",
     "\n",
+    "## Syntax\n",
+    "\n",
+    "Opcode 0 implements the idiomatic `/` fas slot operator, which retrieves a noun at a specified address within the subject.\n",
+    "\n",
+    "```nock\n",
+    "*[a 0 b]            /[b a]\n",
+    "```\n",
+    "\n",
+    "Before discussing opcode 0, the addressing operator, we need to explore how nouns are structured in Nock.\n",
+    "\n",
     "## Nouns\n",
     "\n",
     "The fundamental data structure of Nock is the noun, which is either an atom (a non-negative integer) or a cell (an ordered pair of two nouns).  Nouns can be visualized as [binary trees](https://grokipedia.com/page/Binary_tree), in which atoms are leaves and cells are internal nodes.\n",
@@ -110,7 +120,7 @@
     "    E{{2}}\n",
     "```\n",
     "\n",
-    "## Syntax\n",
+    "## Syntax (Redux)\n",
     "\n",
     "```nock\n",
     "/[1 a]              a\n",
@@ -129,7 +139,9 @@
     "\n",
     "Most of the time, we expand the tree out to the conceptual binary tree map above rather than recursively apply the `/` fas slot rule.\n",
     "\n",
-    "Since there is no address 0, we use `/[0 a]` or `[a 0 0]` to denote a crash.\n",
+    "Opcode 0 is used to retrieve the noun at address `b` within the subject.  `b` must be a positive atom (the address).\n",
+    "\n",
+    "Opcode 0 crashes if the address doesn't exist (e.g., addressing into an atom).  Since there is no address 0, we use `/[0 a]` or `[a 0 0]` to denote a crash.\n",
     "\n",
     "### Binary\n",
     "\n",
