--- a/content/specification/opcode-5.ipynb
+++ b/content/specification/opcode-5.ipynb
@@ -5,19 +5,191 @@
    "id": "418eafb0",
    "metadata": {},
    "source": [
-    "# Opcode 5: Equality Check"
+    "# Opcode 5: Equality Check\n",
+    "\n",
+    "## Syntax\n",
+    "\n",
+    "Opcode 5 implements the idiomatic `=` tis equality operator, which tests for deep equality between two nouns.\n",
+    "\n",
+    "```nock\n",
+    "*[a 5 b c]          =[*[a b] *[a c]]\n",
+    "```\n",
+    "\n",
+    "## Explanation\n",
+    "\n",
+    "Opcode 5 tests whether the products of formulas `b` and `c` are structurally identical.  It returns 0 if equal, 1 if not.\n",
+    "\n",
+    "1. Evaluate `b` against the subject to produce noun `l`.\n",
+    "2. Evaluate `c` against the subject to produce noun `r`.\n",
+    "3. Return 0 if `l` and `r` are identical nouns, 1 otherwise.\n",
+    "\n",
+    "```\n",
+    "=[a a]              0\n",
+    "=[a b]              1\n",
+    "```\n",
+    "\n",
+    "Like opcode 3, `=` tis checks by structure, and also by value.  Equality is deep structural comparison: two cells are equal iff their heads are equal and their tails are equal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a1533472",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject set to: 42\n"
+     ]
+    }
+   ],
+   "source": [
+    ":subject 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3344cd9d",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "[5 [0 1] [1 42]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "730cc82a",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject set to: [42 43]\n"
+     ]
+    }
+   ],
+   "source": [
+    ":subject [42 43]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56187ed5",
+   "metadata": {},
+   "source": [
+    "Two common patterns recur.  The first checks whether a computed noun is equal to a specific target constant noun:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "68bd093b",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "[5 [0 2] [1 42]]"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "363952a8",
    "metadata": {},
-   "source": []
+   "source": [
+    "The second compares two slots in the subject to see if they hold equal values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0cb7227d",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "[5 [0 2] [0 3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "de37427e",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "[5 [4 0 2] [0 3]]"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Nock 4K",
+   "language": "nock",
+   "name": "nock"
+  },
   "language_info": {
-   "name": "python"
+   "file_extension": ".nock",
+   "mimetype": "text/plain",
+   "name": "nock"
   }
  },
  "nbformat": 4,
