--- a/content/specification/opcode-8.ipynb
+++ b/content/specification/opcode-8.ipynb
@@ -5,19 +5,110 @@
    "id": "37c28978",
    "metadata": {},
    "source": [
-    "# Opcode 8: Extend"
+    "# Opcode 8: Extend\n",
+    "\n",
+    "## Syntax\n",
+    "\n",
+    "```nock\n",
+    "*[a 8 b c]          *[[*[a b] a] c]\n",
+    "```\n",
+    "\n",
+    "## Explanation\n",
+    "\n",
+    "Opcode 8 pins a new value to the head of the subject, then evaluate the body.  This is how Nock implements variable binding—the new value becomes accessible at address 2.\n",
+    "\n",
+    "1. Evaluate `b` against subject to produce a new value.\n",
+    "2. Construct `[new-value subject]` as the extended subject.\n",
+    "3. Evaluate `c` against the extended subject.\n",
+    "\n",
+    "After opcode 8, addresses shift:\n",
+    "\n",
+    "* Address 2 → the new pinned value\n",
+    "* Address 3 → the original subject\n",
+    "* Address 6 → what was address 2\n",
+    "* Address 7 → what was address 3\n",
+    "\n",
+    "Opcode 8 extends the subject, while [opcode 7](./opcode-7.ipynb) replaces it:\n",
+    "\n",
+    "```nock\n",
+    "*[a 7 b c]  →  *[*[a b] c]       :: New subject is *[a b]\n",
+    "*[a 8 b c]  →  *[[*[a b] a] c]   :: New subject is [*[a b] a]\n",
+    "```\n",
+    "\n",
+    "There are two primary patterns for using opcode 8.  In the first, a local variable is bound for use in a computation:\n",
+    "\n",
+    "```nock\n",
+    "*[data [8 [compute-value] [body-using-value-at-+2]]]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1a31000d",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject set to: 42\n"
+     ]
+    }
+   ],
+   "source": [
+    ":subject 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2159f0fd",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[41 42]\n"
+     ]
+    }
+   ],
+   "source": [
+    "[8 [1 41] [[0 2] [0 3]]]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "914bad93",
+   "id": "9184e117",
    "metadata": {},
-   "source": []
+   "source": [
+    "The other, more complex, pattern is to pin a core and its arms to the subject for invocation later.  We'll see this pattern in detail in [opcode 9](./opcode-9.ipynb)'s discussion.\n",
+    "\n",
+    "```nock\n",
+    "*[context [8 [1 battery] [9 2 [0 1]]]]\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Nock 4K",
+   "language": "nock",
+   "name": "nock"
+  },
   "language_info": {
-   "name": "python"
+   "file_extension": ".nock",
+   "mimetype": "text/plain",
+   "name": "nock"
   }
  },
  "nbformat": 4,
