--- a/content/specification/opcode-9.ipynb
+++ b/content/specification/opcode-9.ipynb
@@ -5,7 +5,33 @@
    "id": "5394c590",
    "metadata": {},
    "source": [
-    "# Opcode 9: Invoke"
+    "# Opcode 9: Invoke\n",
+    "\n",
+    "## Syntax\n",
+    "\n",
+    "```nock\n",
+    "*[a 9 b c]          *[*[a c] 2 [0 1] 0 b]\n",
+    "```\n",
+    "\n",
+    "## Explanation\n",
+    "\n",
+    "Opcode 9 enables the invocation pattern.  Produce a core (code + data bundle) from formula c, then execute the arm (code) at axis b within that core, with the core itself as subject.\n",
+    "\n",
+    "Briefly, a core in Nock/Hoon is a cell [battery payload]:\n",
+    "\n",
+    "* `battery` (address 2):  one or more formulas (the “arms”) as a noun.\n",
+    "* `payload` (address 3):  the data upon which the formulas operate.\n",
+    "\n",
+    "Opcode 9 is how you call a core's arm.\n",
+    "\n",
+    "1. Evaluate `c` against the subject to produce a new core.\n",
+    "2. Look up the formula at address `b` in the core (the arm).\n",
+    "3. Evaluate that formula with the core as subject.\n",
+    "4. Return the result.\n",
+    "\n",
+    "(Note, however, that there is nothing intrinsic to Nock about the core, `[battery payload]`.  It's a convenient pattern to repeat and reason over, but Nock itself does not enforce any special semantics on it.  See [Detailed Examples](detailed-examples.ipynb) and [Idioms, Gates, Patterns](../examples/idioms-gates-patterns.ipynb) for further discussion.)\n",
+    "\n",
+    "While understanding cores is key to understanding Hoon and Jock, we will defer deeper discussion of cores and arms until later in the tutorial."
    ]
   },
   {
