--- a/content/specification/opcode-11.ipynb
+++ b/content/specification/opcode-11.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cdb30b14",
    "metadata": {
     "vscode": {
@@ -51,16 +51,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d59f29a4",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
    "source": [
-    "[11 %]"
+    "[11 42 0 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "850b8ab5",
+   "metadata": {},
+   "source": [
+    "This Python interpreter for Nock does not currently implement any hints, so all hints are effectively no-ops.  However, they must be computed since they could crash."
    ]
   }
  ],
