--- a/content/specification/opcode-7.ipynb
+++ b/content/specification/opcode-7.ipynb
@@ -5,19 +5,211 @@
    "id": "fcd58bd7",
    "metadata": {},
    "source": [
-    "# Opcode 7: Compose"
+    "# Opcode 7: Compose\n",
+    "\n",
+    "## Syntax\n",
+    "\n",
+    "```nock\n",
+    "*[a 7 b c]          *[*[a b] c]\n",
+    "```\n",
+    "\n",
+    "## Explanation\n",
+    "\n",
+    "Opcode 7 provides function composition. It evaluates `b` against the subject, then uses that result as the subject for evaluating `c`. This produces a classic “pipe” pattern.\n",
+    "\n",
+    "1. Evaluate `b` against subject to produce an intermediate noun.\n",
+    "2. Evaluate `c` against that intermediate to produce the final product.\n",
+    "\n",
+    "When reading it, think of it as “then” or “pipe”.  The first formula changes the subject and the second operates on the new subject."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7b13b227",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject set to: 42\n"
+     ]
+    }
+   ],
+   "source": [
+    ":subject 42"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "cc5167ad",
    "metadata": {},
-   "source": []
+   "source": [
+    "There are two common patterns for using opcode 7.  The first is simply to chain multiple computations together in sequence:\n",
+    "\n",
+    "```nock\n",
+    "*[x [7 transform1 [7 transform2 transform3]]]\n",
+    "```\n",
+    "\n",
+    "Increment, then increment again:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9708feed",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44\n"
+     ]
+    }
+   ],
+   "source": [
+    "[7 [4 0 1] [4 0 1]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c411d97",
+   "metadata": {},
+   "source": [
+    "Increment, then increment again, then check if it's a cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a5c60b4f",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "[7 [4 0 1] [7 [4 0 1] 3 0 1]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "440ba0a4",
+   "metadata": {},
+   "source": [
+    "Make a cell of the subject repeated, then check if it's a cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0897cb5f",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "[7 [[0 1] [0 1]] 3 0 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "585b622d",
+   "metadata": {},
+   "source": [
+    "The second is to set up a context for a computation by first extending the subject with additional data, then performing the computation in that extended context:\n",
+    "\n",
+    "```nock\n",
+    "*[input [7 [build-context] [main-computation]]]\n",
+    "```\n",
+    "\n",
+    "(This is typically paired with [opcode 8](./opcode-8.ipynb) to build the context.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0488d095",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject set to: 42\n"
+     ]
+    }
+   ],
+   "source": [
+    ":subject 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c38f615b",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "[7 [[0 1] [1 41]] [5 [0 2] [4 0 3]]]"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Nock 4K",
+   "language": "nock",
+   "name": "nock"
+  },
   "language_info": {
-   "name": "python"
+   "file_extension": ".nock",
+   "mimetype": "text/plain",
+   "name": "nock"
   }
  },
  "nbformat": 4,
