--- a/content/specification/opcode-10.ipynb
+++ b/content/specification/opcode-10.ipynb
@@ -22,6 +22,15 @@
     "\n",
     "## Explanation\n",
     "\n",
+    "Opcode 10 takes four arguments: a subject `a`, an address `b`, a replacement expression `c`, and a target structure `d`.\n",
+    "\n",
+    "1. `b` is the target address (atom).\n",
+    "2. Evaluate `c` against subject to produce the replacement value.\n",
+    "3. Evaluate `d` against subject to produce the target structure.\n",
+    "4. Return the target with address `b` replaced by replacement.\n",
+    "\n",
+    "Opcode 10 is important for gate calls (function calls), which require looking up a stored procedure noun, modifying its arguments at a fixed address, and then evaluating the modified noun.\n",
+    "\n",
     "Opcode 10 was implemented relatively late in Nock's development (Nock 4K) as an expedient for the Vere runtime's memory management.  Many cells were being produced in memory, and the edit operator allowed for in-place modification of these cells without requiring the allocation of new memory.\n",
     "\n",
     "As ~fodwyt-ragful, one of the chief architects of this change, explained,\n",
