--- a/content/specification/opcode-11.ipynb
+++ b/content/specification/opcode-11.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cdb30b14",
    "metadata": {
     "vscode": {
@@ -50,8 +50,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e55c643d",
+   "metadata": {},
+   "source": [
+    "Static hints are simple tags for the interpreter to recognize:\n",
+    "\n",
+    "```nock\n",
+    "*[subject 11 tag formula]  → *[subject formula]\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d59f29a4",
    "metadata": {
     "vscode": {
@@ -73,11 +85,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "61ee6ceb",
+   "metadata": {},
+   "source": [
+    "Dynamic hints actively generate data for the runtime:\n",
+    "\n",
+    "```nock\n",
+    "*[subject 11 [tag clue] formula]\n",
+    "```\n",
+    "\n",
+    "1. The `clue` formula is evaluated (its result may be used by the interpreter).\n",
+    "2. The `formula` is evaluated and returned.\n",
+    "3. The hint `tag` and `clue` value are available to the interpreter for side effects.\n",
+    "\n",
+    "Hint tags tend to be expressed in code as ASCII text, which reduces unambiguously to a numerical atom in Nock as a byte pattern."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "850b8ab5",
    "metadata": {},
    "source": [
     "This Python interpreter for Nock does not currently implement any hints, so all hints are effectively no-ops.  However, they must be computed since they could crash."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ed74965",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
