--- a/content/understanding/combinator-approach.ipynb
+++ b/content/understanding/combinator-approach.ipynb
@@ -85,7 +85,34 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The S combinator distributes a common argument `z` to two functions `x` and `y`, then applies the first result to the second.\n",
+    "\n",
+    "```\n",
+    "S x y z = (x z) (y z)\n",
+    "```\n",
+    "\n",
+    "S (along with K) forms a Turing-complete basis.\n",
+    "\n",
+    "[Opcode 2](../specification/opcode-2.ipynb) is analogous to the S combinator, in that it is the subject-oriented counterpart to the applicative distribution pattern of S.  This structural similarity is why opcode 2 (combined with the other primitives [opcode 0](../specification/opcode-0.ipynb) and [opcode 1](../specification/opcode-1.ipynb)) provides Turing completeness.\n",
+    "\n",
+    "## Similarity\n",
+    "\n",
+    "Both operations share the pattern “distribute, then combine”:\n",
+    "\n",
+    "| S Combinator | Nock 2 |\n",
+    "| --- | --- |\n",
+    "| Common argument: `z` | Common subject: `a` | \n",
+    "| Two functions: `x`, `y` | Two formulas: `b`, `c` |\n",
+    "| Distribute: `(x z)` and `(y z)` | Distribute: `*[a b]` and `*[a c]` |\n",
+    "| Combine via application | Combine via `*` evaluation |\n",
+    "\n",
+    "## Differences\n",
+    "\n",
+    "1. Evaluation model: S uses [lambda](./lambda-approach.ipynb)-style application (`f x`). Nock uses subject-oriented evaluation (`*[subject formula]`), which has the opposite argument order convention.\n",
+    "2. Argument ordering: In S, the first distributed result is the function. In opcode 2, the second distributed result (`*[a c]`) becomes the formula, and the first (`*[a b]`) becomes the subject.\n",
+    "3. Semantics: Lambda application and Nock evaluation aren't the same operation, though they're both notions of \"running code on data.\""
+   ]
   }
  ],
  "metadata": {
