--- a/_sources/content/specification/cell-distribution.ipynb
+++ b/_sources/content/specification/cell-distribution.ipynb
@@ -2,34 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7fb77680",
+   "id": "67b11a78",
    "metadata": {},
    "source": [
-    "# Opcode 2: Evaluate\n",
+    "# Cell Distribution Rule\n",
     "\n",
     "## Syntax\n",
     "\n",
-    "Opcode 2 implements the `*` tar evaluate operator, which dynamically computes a new subject and formula, then evaluates the formula against the subject.\n",
-    "\n",
     "```nock\n",
-    "*[a 2 b c]          *[*[a b] *[a c]]\n",
+    "*[a [b c] d]        [*[a b c] *[a d]] \n",
     "```\n",
     "\n",
     "## Explanation\n",
     "\n",
-    "The `eval` of Nock, opcode 2 computes a new subject from formula `b`, compute a new formula from formula `c`, then nock the results together.  This enables dynamic code execution.\n",
+    "When a formula's head is a cell (not an atom/opcode), Nock treats both parts as separate formulas and returns a cell of their results.\n",
     "\n",
-    "1. Evaluate `b` against the subject to produce a noun (new subject).\n",
-    "2. Evaluate `c` against the subject to produce a noun (new formula).\n",
-    "3. Evaluate the new formula against the new subject to yield the final product.\n",
+    "1. If the formula is `[[b c] d]` where `[b c]` is a cell.\n",
+    "2. Evaluate `[b c]` as a formula to produce a result `A`.\n",
+    "3. Evaluate `d` as a formula to produce a result `B`.\n",
+    "4. Return the cell `[A B]`.\n",
     "\n",
-    "Opcode 2 is the foundation for function calls, code generation, and metaprogramming in Nock.  However, it is not used directly by the Hoon and Jock compiler, which instead use opcode 2 via the opcode 9 macro."
+    "This is equivalent to Lisp's `cons` as an implicit operation.  It's recognizable by cell-headed formulas slots."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d4ab8915",
+   "id": "5f1f4779",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -50,16 +49,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0809a59",
+   "id": "04fc3c6e",
    "metadata": {},
    "source": [
-    "This simple formula computes the constant function that always returns 100, then returns its subject (now 100)."
+    "Evaluate with two constants:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "218f7f1b",
+   "id": "aea79ce1",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -70,26 +69,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "[10 20]\n"
      ]
     }
    ],
    "source": [
-    "[2 [1 100] [1 [0 1]]]"
+    "[[1 10] [1 20]]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "88307245",
+   "id": "de8a75a0",
    "metadata": {},
    "source": [
-    "This formula acts as a dynamic formula selection, which sets the subject to 5 and then calculates its increment."
+    "Pair a slot and an increment:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "eb6c2feb",
+   "execution_count": 5,
+   "id": "9389b7ba",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -100,18 +99,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subject set to: [5 4 0 1]\n"
+      "[42 43]\n"
      ]
     }
    ],
    "source": [
-    ":subject [5 [4 0 1]]"
+    "[[0 1] [4 0 1]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8397a99f",
+   "metadata": {},
+   "source": [
+    "A more complex nested distribution:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "4276cfc1",
+   "execution_count": 6,
+   "id": "e7fbf1f0",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -122,12 +129,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "[[42 42] 43]\n"
      ]
     }
    ],
    "source": [
-    "[2 [0 2] [0 3]]"
+    "[[[0 1] [0 1]] [4 0 1]]"
    ]
   }
  ],
