--- a/_sources/content/specification/detailed-examples.ipynb
+++ b/_sources/content/specification/detailed-examples.ipynb
@@ -544,7 +544,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* How would you implement the Boolean operators in Nock?  (Properly “loobeans”, since `0` is `TRUE` and `1` is `FALSE` in Nock.)"
+    "* How would you implement the Boolean operators in Nock?  (Properly “loobeans”, since `0` is `TRUE` and `1` is `FALSE` in Nock.)  See [Opcode 6](opcode-6.ipynb) for a starting point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quines\n",
+    "\n",
+    "Nock quines are Nock expressions that evaluate to themselves.  They result trivially from [opcode 0](opcode-0.ipynb), which simply looks up a part of the subject.  If the subject is the expression itself, then looking up address 1 returns the entire expression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject set to: [0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    ":subject [0 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This formula will reproduce itself from that subject:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1] 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "[[0 1] [0 1]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other quines are possible as well, and left as an exercise for the reader."
    ]
   }
  ],
