--- a/_sources/content/specification/opcode-4.ipynb
+++ b/_sources/content/specification/opcode-4.ipynb
@@ -165,6 +165,8 @@
    "id": "690f60c3",
    "metadata": {},
    "source": [
+    "Atoms are formally unbounded in size, so incrementing the largest possible atom is not a problem in Nock itself.  However, practical interpreters may have limits on the size of atoms they can represent.\n",
+    "\n",
     "In this interpreter, which is written in Python, there are only practical limits (the size of RAM) to integers and thus to atom size."
    ]
   },
