--- a/_sources/content/specification/opcode-6.ipynb
+++ b/_sources/content/specification/opcode-6.ipynb
@@ -33,10 +33,108 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "f7d9d84c",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject set to: 42\n"
+     ]
+    }
+   ],
+   "source": [
+    ":subject 42"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39abee89",
    "metadata": {},
-   "source": []
+   "source": [
+    "You need an expression that results in 0 or 1 to use as the test.  For example, to test whether the subject is equal to a value such as 42, use opcode 5:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "620a6860",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "[6 [5 [1 42] [0 1]] [1 100] [1 0]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6bed080",
+   "metadata": {},
+   "source": [
+    "This is how to implement a `NOT` operator on a loobean value:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9c83972b",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject set to: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    ":subject 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "80ef62f9",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "[6 [5 [1 0] [0 1]] [1 1] [1 0]]"
+   ]
   }
  ],
  "metadata": {
@@ -46,6 +144,8 @@
    "name": "nock"
   },
   "language_info": {
+   "file_extension": ".nock",
+   "mimetype": "text/plain",
    "name": "nock"
   }
  },
