--- a/_sources/content/specification/opcode-9.ipynb
+++ b/_sources/content/specification/opcode-9.ipynb
@@ -36,14 +36,83 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4546b59d",
+   "id": "4b5b0d65",
    "metadata": {},
-   "source": []
+   "source": [
+    "This example subject pins a bit of operational code as a constant for later use:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4546b59d",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject set to: [1 4 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    ":subject [1 4 1 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f88adeef",
+   "metadata": {},
+   "source": [
+    "This code retrieves and evaluates it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7b6d80d3",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "[9 1 [0 3]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af6af5b4",
+   "metadata": {},
+   "source": [
+    "There are more complicated patterns to build on top of this once we look at cores in detail."
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Nock 4K",
+   "language": "nock",
+   "name": "nock"
+  },
   "language_info": {
-   "name": "python"
+   "file_extension": ".nock",
+   "mimetype": "text/plain",
+   "name": "nock"
   }
  },
  "nbformat": 4,
