Post LLM guide and timluc guide.

--- a/content/examples/idioms-gates-patterns.ipynb
+++ b/content/examples/idioms-gates-patterns.ipynb
@@ -95,47 +95,12 @@
     "\n",
     "A core is a noun of the form `[battery payload]`, where the battery is a noun that can be used to compute new cores, and the payload is an arbitrary noun.  (It is worth reiterating at this point that Nock has no preference for this structure; it is simply a convention that Nock programmers use to organize their code.)\n",
     "\n",
-    "## Gate-Building Gates\n",
+    "<!-- ## Gate-Building Gates\n",
     "\n",
     "Besides \n",
     "\n",
-    "## Doors\n"
+    "## Doors -->\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to the missing module 'nock_kernel'. Consider installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresMissingModule'>here</a> for more info."
-     ]
-    }
-   ],
-   "source": [
-    ":subject 42"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    ":subject 54"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -145,16 +110,9 @@
    "name": "nock"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "nock",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "file_extension": ".nock",
+   "mimetype": "text/plain",
+   "name": "nock"
   }
  },
  "nbformat": 4,
