--- a/content/examples/timluc-miptev--nock-for-everyday-coders.ipynb
+++ b/content/examples/timluc-miptev--nock-for-everyday-coders.ipynb
@@ -31,57 +31,7 @@
     "\n",
     "* [Publication:  ~timluc-miptev (2025), “Nock for Everyday Coders”, _Urbit Systems Technical Journal_ II:1, pp. 1–45](https://urbitsystems.tech/article/v02-i01/nock-for-everyday-coders)\n",
     "\n",
-    "## Contents\n",
-    "\n",
-    "```\n",
-    "1 Getting Started\n",
-    " 1.1 Phases of Nock\n",
-    " 1.2 What Is a Nock Interpreter?\n",
-    " 1.3 How to Run Nock Code\n",
-    " 1.4 Subject, Formula?\n",
-    " 1.5 Evaluating Our First Nock\n",
-    "            Code\n",
-    " 2 Fundamental Opcodes\n",
-    " 2.1 Nock’s Simplest Functions, `0` and `1`\n",
-    " 2.2 Binary Tree Addressing\n",
-    " 2.3 `0`, the “Memory\n",
-    "            Slot” Function\n",
-    " 2.4 `1`, the\n",
-    "            “Quoter” Function\n",
-    " 2.5 `4`, the\n",
-    "            Incrementing Function\n",
-    " 2.6 The Cell-Maker (aka the Distribution Rule)\n",
-    " 2.7 `3`, the Cell\n",
-    "            Detector, and `5`, the\n",
-    "            Equality Tester\n",
-    " 2.8 `2`, the\n",
-    "            “Subject-Altering” Function\n",
-    " 2.9 Summary of Fundamental\n",
-    "            Opcodes\n",
-    " 3 Composite Opcodes\n",
-    " 3.1 An Aside About the `1` (Quoter\n",
-    "            Function)\n",
-    " 3.2 `6`, “If/Else”\n",
-    "            Conditional Branch\n",
-    " 3.3 `7`, the\n",
-    "            “Composition” Opcode\n",
-    " 3.4 `8`, the\n",
-    "            “Variable Push” Opcode\n",
-    " 3.5 `9`, Run a\n",
-    "            Stored Procedure Arm in a Core\n",
-    " 3.6 `10`, Replace a\n",
-    "            Memory Slot\n",
-    " 3.7 Real Nock Code\n",
-    " 3.8 Summary\n",
-    " 4 Interlude\n",
-    " 4.1 Order of Operations\n",
-    " 4.2 `11`, Hints and\n",
-    "            Side Eﬀects for the Interpreter\n",
-    " 4.3 Nock in Hoon\n",
-    " 5 The Core as Design Pattern\n",
-    " 5.1 Building a Core Manually\n",
-    " 6 Conclusion\n",
-    "```"
+    "This tutorial is interactive.  Click the rocket icon in the header navbar above to launch a live coding environment where you can run and modify the code examples directly in your browser."
    ]
   },
   {
